<resources>
    <string name="app_name">Formula1</string>
    <string name="title_activity_maps">Map</string>
    <string name="constructor_name">Constructor name</string>
    <string name="constructor_nationality">Constructor nationality</string>
    <string name="constructor_url">Constructor URL</string>
    <string name="driver_code">Driver code</string>
    <string name="driver_url">Driver url</string>
    <string name="driver_number">Driver number</string>
    <string name="driver_given_name">Driver given name</string>
    <string name="driver_family_name">Driver family name</string>
    <string name="driver_date_of_birth">Driver date of birth</string>
    <string name="driver_nationality">Driver nationality</string>
    <string name="constructor_of_the_week">Constructor of the week</string>
    <string name="driver_of_the_week">Driver of the week</string>

    <!-- Maps -->
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>

    <!-- Location -->
    <string name="select_location">Please select a location</string>
    <string name="confirm_location">Please confirm location</string>
    <string name="dropped_pin">Dropped Pin</string>

    <!-- About -->
    <string name="credits">Formula 1</string>
    <string name="formula1_about_text">Formula One (also known as Formula 1 or F1) is the highest class of international auto racing for single-seater formula racing cars sanctioned by the Fédération Internationale de lAutomobile (FIA). The World Drivers Championship, which became the FIA Formula One World Championship in 1981, has been one of the premier forms of racing around the world since its inaugural season in 1950. The word formula in the name refers to the set of rules to which all participants cars must conform. A Formula One season consists of a series of races, known as Grands Prix (French for \'grand prizes\' or \'great prizes\'), which take place worldwide on purpose-built circuits and closed public roads.


The start of 2018 Austrian Grand Prix
The results of each race are evaluated using a points system to determine two annual World Championships: one for drivers, the other for constructors. Each driver must hold a valid Super Licence, the highest class of racing licence issued by the FIA.[2] The races must run on tracks graded "1" (formerly "A"), the highest grade-rating issued by the FIA.[2] Most events occur in rural locations on purpose-built tracks, but several events take place on city streets.

Formula One cars are the fastest regulated road-course racing cars in the world, owing to very high cornering speeds achieved through the generation of large amounts of aerodynamic downforce. The cars underwent major changes in 2017,[3] allowing wider front and rear wings, and wider tyres, resulting in peak cornering forces near 6.5 lateral g and top speeds of up to approximately 360 km/h (225 mph).[4][5] As of 2019 the hybrid engines are limited in performance to a maximum of 15,000 rpm; the cars are very dependent on electronics and aerodynamics, suspension and tyres. Traction control, launch control, and automatic shifting, plus other electronic driving aids, have been banned since 2004 and 2008, respectively.[6]</string>
</resources>