<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="driver"
            type="com.udacity.capstone.formula1.dto.Driver" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/constructor_symbol_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:driverImage="@{driver.driverId}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constructor_symbol_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/driver_code_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_code"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/constructor_name"/>

                <TextView
                    android:id="@+id/constructor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{driver.code}"
                    android:textColor="@color/default_text_color"
                    tools:text="VET"
                    app:layout_constraintTop_toBottomOf="@id/driver_code_symbol"
                    app:layout_constraintBottom_toTopOf="@id/driver_number_holder"/>

                <TextView
                    android:id="@+id/driver_number_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_number"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/constructor_name"
                    app:layout_constraintBottom_toTopOf="@id/driver_number"/>

                <TextView
                    android:id="@+id/driver_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:permanentNumber="@{driver.permanentNumber}"
                    tools:text="25.126 au"
                    app:layout_constraintTop_toBottomOf="@id/driver_number_holder"
                    app:layout_constraintBottom_toTopOf="@id/driver_given_name_placeholder"/>

                <ImageView
                    android:id="@+id/help_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_help_circle"
                    tools:ignore="VectorDrawableCompat"
                    app:layout_constraintLeft_toRightOf="@id/driver_number"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/driver_number_holder"/>

                <TextView
                    android:id="@+id/driver_given_name_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/driver_given_name"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/driver_number"
                    app:layout_constraintBottom_toTopOf="@id/driver_given_name"/>

                <TextView
                    android:id="@+id/driver_given_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    android:text="@{driver.givenName}"
                    tools:text="Sebastian"
                    app:layout_constraintTop_toBottomOf="@id/driver_given_name_placeholder"
                    app:layout_constraintBottom_toTopOf="@id/driver_family_name_placeholder"/>

                <TextView
                    android:id="@+id/driver_family_name_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/driver_family_name"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/driver_given_name"
                    app:layout_constraintBottom_toTopOf="@id/driver_family_name"/>

                <TextView
                    android:id="@+id/driver_family_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    android:text="@{driver.familyName}"
                    tools:text="Vettel"
                    app:layout_constraintTop_toBottomOf="@id/driver_family_name_placeholder"
                    app:layout_constraintBottom_toTopOf="@id/driver_date_of_birth_placeholder"/>

                <TextView
                    android:id="@+id/driver_date_of_birth_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/driver_date_of_birth"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/driver_family_name"
                    app:layout_constraintBottom_toTopOf="@id/driver_date_of_birth"/>

                <TextView
                    android:id="@+id/driver_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    android:text="@{driver.dateOfBirth}"
                    tools:text="1988-03-02"
                    app:layout_constraintTop_toBottomOf="@id/driver_date_of_birth_placeholder"
                    app:layout_constraintBottom_toTopOf="@id/driver_nationality_placeholder"/>

                <TextView
                    android:id="@+id/driver_nationality_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/driver_nationality"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/driver_date_of_birth"
                    app:layout_constraintBottom_toTopOf="@id/driver_nationality"/>

                <TextView
                    android:id="@+id/driver_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    android:text="@{driver.nationality}"
                    tools:text="German"
                    app:layout_constraintTop_toBottomOf="@id/driver_nationality_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>