<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="constructor"
            type="com.udacity.capstone.formula1.dto.Constructor" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/constructor_symbol_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:constructorSymbol="@{constructor.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constructor_symbol_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/constructor_name_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constructor_name"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/constructor_name"/>

                <TextView
                    android:id="@+id/constructor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{constructor.name}"
                    android:textColor="@color/default_text_color"
                    tools:text="2020-02-01"
                    app:layout_constraintTop_toBottomOf="@id/constructor_name_placeholder"
                    app:layout_constraintBottom_toTopOf="@id/constructor_nationality_placeholder"/>

                <TextView
                    android:id="@+id/constructor_nationality_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constructor_nationality"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/constructor_name"
                    app:layout_constraintBottom_toTopOf="@id/constructor_nationality"/>

                <TextView
                    android:id="@+id/constructor_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    android:text="@{constructor.nationality}"
                    tools:text="25.126 au"
                    app:layout_constraintTop_toBottomOf="@id/constructor_nationality_placeholder"
                    app:layout_constraintBottom_toTopOf="@id/constructor_url_placeholder"/>

                <ImageView
                    android:id="@+id/help_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_help_circle"
                    tools:ignore="VectorDrawableCompat"
                    app:layout_constraintLeft_toRightOf="@id/constructor_nationality"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constructor_nationality_placeholder"/>


                <TextView
                    android:id="@+id/constructor_url_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/constructor_url"
                    android:textColor="@color/default_text_color"
                    app:layout_constraintTop_toBottomOf="@id/constructor_nationality"
                    app:layout_constraintBottom_toTopOf="@id/constructor_url"/>

                <TextView
                    android:id="@+id/constructor_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    android:text="@{constructor.url}"
                    tools:text="http://sample.mclaren.pt"
                    app:layout_constraintTop_toBottomOf="@id/constructor_url_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>